--- a/src/views/emails/passwordReset.pug
+++ b/src/views/emails/passwordReset.pug
@@ -58,6 +58,10 @@ html
         font-weight:500;
       }
 
+      .username{
+        text-transform:capitalize;
+      }
+
   body
     div.container
       div.content 
@@ -67,7 +71,7 @@ html
           p.welcome
             strong Academlinks
           p.thanks Dear 
-            strong #{userName}
+            strong.username #{userName}
           p.message
             span This is your temporary password  
             strong (valid for only 10 minutes)
